--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <span class="animate scroll" style="--i:4;">
             </p>
             <div class="btn-box btns">
-                <a href="images/certificates/Ashish Vijay Yelonde.png" class="btn">My Resume</a>
+                <a href="https://drive.google.com/file/d/19zagQZmW26ROnNIgkE-9_24O4OQYK1Mm/view" class="btn">My Resume</a>
                 <span class="animate scroll" style="--i:5;">
                 
             </div>
